# worldgen

./: README.md  pyproject.toml
tests/: test_evaluate.py  test_geometry.py
worldgen/: __init__.py  cli.py  clutter.py  course.py  evaluate.py  geometry.py  maze.py  presets.py  preview.py  render.py  sdf.py
