[project]
name = "worldgen"
version = "0.1.0"
description = "Procedural Gazebo world generator for the HW1 wall-following assignment"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
worldgen = "worldgen.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worldgen"]
